--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "write": "chmod +x bin/write.sh; bin/write.sh"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -15,6 +16,8 @@
     "autoprefixer": "^10.2.3",
     "gray-matter": "^4.0.2",
     "next": "10.0.5",
+    "next-mdx-enhanced": "^5.0.0",
+    "next-seo": "^4.17.0",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
